manifests/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
    component: data-science-pipelines
spec:
  selector:
    matchLabels:
      app: minio
      component: data-science-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        component: data-science-pipelines
    spec:
      containers:
        - args:
            - server
            - /data
          image: 'quay.io/opendatahub/minio:RELEASE.2019-08-14T20-37-41Z-license-compliance'
          name: minio
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: minio
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio
